# AgentGov

./: .env  README.md  docker-compose.yml  proposal.md
.github/workflows/: test.yml
ai-governance-sidecar/: .env  .gitignore  .golangci.yml  COMPLETE_SYSTEM.md  DELIVERY_REPORT.md  Dockerfile  INTEGRATION_TESTS.md  Makefile  UI_DEPLOYMENT.md  docker-compose.yml  go.mod  go.sum  ui_assets.go
ai-governance-sidecar/.github/workflows/: integration-tests.yml
ai-governance-sidecar/cmd/sidecar/: main.go
ai-governance-sidecar/db/: audit.db
ai-governance-sidecar/internal/: README.md
ai-governance-sidecar/internal/approval/: queue.go  queue_test.go  types.go
ai-governance-sidecar/policies/: .manifest  Cargo.toml  README.md  allow_all.wasm  bootstrap.sh  build.sh  test-approval-flow.sh
ai-governance-sidecar/policies/passthrough/src/: lib.rs
ai-governance-sidecar/policies/rate_limit/src/: lib.rs
ai-governance-sidecar/policies/sensitive_data/src/: lib.rs
ai-governance-sidecar/policies/src/: lib.rs
ai-governance-sidecar/policies/tests/: integration_test.rs  passthrough_test.rs  rate_limit_test.rs  sensitive_data_test.rs
ai-governance-sidecar/policies/wasm/: rate_limit.wasm  sensitive_data.wasm
ai-governance-sidecar/ui/: Dockerfile  SETUP.md  nginx.conf  package-lock.json  package.json  setup.sh
policies/examples/: README.md  allow_all.rego  allow_all.wasm  allow_all_test.json  business_hours.rego  business_hours.wasm  business_hours_test.json  require_approval.rego  require_approval.wasm  require_approval_test.json  validate_policies.sh
(+66 files in other folders)
