[package]
name = "governance-policies"
version = "0.1.0"
edition = "2021"

[lib]
name = "governance_policies"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
serde_json = "1.0"

[[test]]
name = "sensitive_data_test"
path = "tests/sensitive_data_test.rs"

[[test]]
name = "rate_limit_test"
path = "tests/rate_limit_test.rs"

[[test]]
name = "passthrough_test"
path = "tests/passthrough_test.rs"

[[test]]
name = "integration_test"
path = "tests/integration_test.rs"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true